# synacor-challenge

./: .gitignore  CODES.txt  Cargo.toml  README.md  WALKTHROUGH.md  arch-spec  graphviz.dot  vault.dot
.cargo/: config.toml
src/: assembly.rs  cli.rs  emulator.rs  lib.rs  main.rs  solver.rs  tests.rs
