[package]
name = "synacor-challenge"
version = "0.1.0"
authors = ["tatref <tatref@github.com>"]
edition = "2021"

[dependencies]
byteorder = "1"
regex = "1"
rustyline = "17"
clap = "4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.2.0"
serde_json = "1.0.105"
itertools = "0.14.0"
colorgrad = { version = "0.7.2", default-features = false, features = ["preset"] }
rand = "0.9.2"
